[tool.poetry]
name = "notas-musicais-duno"
version = "0.1.0"
description = ""
authors = ["Gabriel Moreira <gabriel.antonioms@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais_duno"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs-material = "^9.1.7"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
